# effective-typestate

./: .gitignore  .gitmodules  Justfile  Makefile  README.md  devbox.json  presentation.md  pyproject.toml
.github/workflows/: main.yml
src/email/: 01-conditionals.py  02-types.py
src/git/: init.py
src/process/: 01-int+string.py  02-enum.py  03-types.py
workflows/: main.yml
