[tool.poetry]
name = "effective-typestate"
version = "0.1.0"
description = ""
authors = ["Alex Povel <git@alexpovel.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.5.1"

[tool.mypy]
show_error_codes = true
strict = true
namespace_packages = true
disallow_any_unimported = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
